--- a/md/基础知识/01/01.html
+++ b/md/基础知识/01/01.html
@@ -225,7 +225,7 @@
 </li>
 <li>
 <p>疾病风险评估、预测</p>
-<p>健康危险因素：从人群健康和流行病学的角度看，凡是那些能使<code class="language-vim">人群发病和死亡风险</code>（risk）升高的因素即可认为是危险因素，</p>
+<p>健康危险因素：从人群健康和流行病学的角度看，凡是那些能使<code class="language-vim">人群发病和死亡风险</code>（risk）升高的因素即可认为是危险因素，也是流行病学层面的病因概念。</p>
 </li>
 </ol>
 </li>
@@ -307,7 +307,7 @@
 <li>医院保健和健康管理部门</li>
 <li>医院和民营健康体检机构</li>
 <li>社区医疗卫生服务机构</li>
-<li>机关单位、企业、不对、学校医务室</li>
+<li>机关单位、企业、学校医务室</li>
 </ul>
 
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
