--- a/md/基础知识/01/02.html
+++ b/md/基础知识/01/02.html
@@ -207,7 +207,7 @@
 </li>
 </ul>
 <h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 疾病管理</h2>
-<p>疾病管理是<code class="language-vim">一个协调医疗保健干预和与病人沟通的系统</code>，它强调病人自我保健的重要性。</p>
+<p>疾病管理是<code class="language-vim">一个协调医疗保健干预和与病人沟通的系统</code>，它强调病人自我保健的重要性。疾病管理支撑医患关系和保健计划强调运用循证医学和增强个人能力的策略来预防疾病的恶化，它以持续性地改善个体或群体健康为基准来评估临床、人文和经济方面的效果。</p>
 <p>疾病管理包含：<code class="language-vim">人群识别</code>、<code class="language-vim">循证医学指导</code>、<code class="language-vim">医生与服务提供者协调工作</code>、<code class="language-vim">病人自我管理教育</code>、<code class="language-vim">过程与结果的预测和管理</code>、<code class="language-vim">定期报告和反馈</code>。</p>
 <ul>
 <li>
