--- a/md/基础知识/01/index.html
+++ b/md/基础知识/01/index.html
@@ -20,7 +20,7 @@
       rel="apple-touch-icon-precomposed" sizes="152x152">
 <link href="../../../../asserts/lsbook/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <!--分页-->
-<link href="01.html" rel="next"/>
+<link href="习题.html" rel="next"/>
 </head>
 <body>
 <div class="book"><div class="book-summary">
@@ -33,11 +33,7 @@
 <ul class="articles"><li class="chapter" data-level="1.1" data-path="../../../index.html"><a href="../../../index.html"><b>1.1.</b>介绍</a></li></ul>
 <li class="header">基础知识</li>
 <ul class="articles"><li class="chapter active" data-level="2.1" data-path="index.html"><a href="index.html"><b>2.1.</b>第一章 健康管理概述</a>
-<ul class="articles"><li class="chapter" data-level="2.1.1" data-path="01.html"><a href="01.html"><b>2.1.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.1.2" data-path="02.html"><a href="02.html"><b>2.1.2.</b>第二节 健康管理的基本策略</a></li>
-<li class="chapter" data-level="2.1.3" data-path="03.html"><a href="03.html"><b>2.1.3.</b>第三节 健康管理的发展趋势</a></li>
-<li class="chapter" data-level="2.1.4" data-path="04.html"><a href="04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li>
-<li class="chapter" data-level="2.1.5" data-path="习题.html"><a href="习题.html"><b>2.1.5.</b>习题</a></li></ul></li>
+<ul class="articles"><li class="chapter" data-level="2.1.1" data-path="习题.html"><a href="习题.html"><b>2.1.1.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
@@ -138,149 +134,125 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第一章 健康管理概述</a></li></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第一章 健康管理概述</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康管理师</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康管理的概念</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>健康管理的目的</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>健康管理的目标与特点</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>健康管理的理论和实践溯源</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>健康管理的科学基础</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>健康管理的基本不住</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>健康管理的服务流程</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>提供健康管理服务机构</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>健康管理的基本策略</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>10.1. </b>生活方式管理特点</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>10.2. </b>健康行为改变的技术</a></li></ul></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
                         <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第一章 健康管理概述</h1>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康管理师</h2>
+<p>健康管理师是从事对<code class="language-vim">个体</code>或<code class="language-vim">群体</code>健康的检测、分析、评估以及健康咨询、指导和危险因素干预等工作的<code class="language-vim">专业人员</code>。</p>
+<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康管理的概念</h2>
+<p>健康管理是以<code class="language-vim">现代健康概念（生理、心理、社会适应能力）和新的医学模式（生理-心理-社会）以及中医治未病</code>为指导，采用现代医学、管理学等相关学科的理论、技术和方法，对<code class="language-vim">个体或群体健康状况</code>及影响健康的危险因素进行全面连续的<code class="language-vim">检测、评估和干预</code>，实现以促进人人健康为目标的新型医学服务过程。</p>
 <ul>
-<li><a href="01">第一节 概述</a></li>
-<li><a href="02">第二节 健康管理的基本策略</a></li>
-<li><a href="03">第三节 健康管理的发展趋势</a></li>
-<li><a href="04">第四节 基本卫生保健</a></li>
-<li><a href="%E4%B9%A0%E9%A2%98">习题</a></li>
+<li>指导思想：<code class="language-vim">现代健康概念和中医治未病</code></li>
+<li>主要人群：<code class="language-vim">个体和群体健康状况</code></li>
+<li>实现目标：<code class="language-vim">人人健康为目标</code></li>
+<li>根本目标：<code class="language-vim">最小投资，获得最大的健康效益</code></li>
 </ul>
-<hr />
+<p>健康管理的主体是经过系统医学教育或培训并取得相关资质的<code class="language-vim">医务工作者</code>，客体是<code class="language-vim">健康人群、亚健康人群（亚临床人群）以及慢性非传染疾病早期或康复期人群</code>。健康管理服务的两大支撑点是<code class="language-vim">信息技术和金融保险</code>。</p>
+<p>健康管理的公众理念是“<code class="language-vim">病前主动防，病后科学管，跟踪服务不间断</code>”。</p>
 <ul>
-<li>
-<p><strong>健康管理概念：</strong>以现在<code class="language-vim">健康概念</code>和<code class="language-vim">中医治未病</code>的思想为指导，运用<code class="language-vim">医学</code>、<code class="language-vim">管理学</code>等相关学科的理论、技术和方法，对<code class="language-vim">个体</code>或<code class="language-vim">群体</code>健康状况及影响健康的危险因素进行全面连续的检测、评估和干预，实现以促进<code class="language-vim">人人健康</code>为目标的新医学服务过程。</p>
-</li>
-<li>
-<p><strong>健康管理特点：</strong>是<code class="language-vim">管理学</code>、<code class="language-vim">预防医学研究</code>、<code class="language-vim">临床医学</code>的交叉与结合，是三者互相弥合与提炼后形成的一门新兴学科与行业。</p>
-</li>
-<li>
-<p><strong>健康管理的宗旨：</strong>是有效地利用有限的资源来达到最大的健康效果，其主体是经过系统医学教育或培训并取得相应资质的医务工作者，客体是<code class="language-vim">健康人群</code>和<code class="language-vim">亚健康人群</code>及<code class="language-vim">慢性非传染性疾病早期或康复期人群</code>。健康管理服务的两大支撑点是<code class="language-vim">信息技术</code>和<code class="language-vim">金融保险</code>。公众理念是<code class="language-vim">病前主动防</code>，<code class="language-vim">病后科学馆</code>，<code class="language-vim">跟踪服务不间断</code>。</p>
-</li>
-<li>
-<p>健康管理的目标包括</p>
-<ol>
-<li>完善<code class="language-vim">健康</code>和<code class="language-vim">福利</code></li>
-<li>减少<code class="language-vim">健康危险</code>因素</li>
-<li>预防疾病<code class="language-vim">高危人群</code>患病</li>
-<li>易化疾病的<code class="language-vim">早期诊断</code></li>
-<li>增加<code class="language-vim">临床效用</code>效益</li>
-<li><code class="language-vim">避免可预防</code>的疾病相关并发症的发生</li>
-<li><code class="language-vim">消除或减少</code>无效或不必要的医疗服务</li>
-<li>对疾病结局作出度量并提供持续的<code class="language-vim">评估</code>和改进</li>
-</ol>
-</li>
-<li>
-<p>健康管理的基本步骤：</p>
-<ol>
-<li>了解你的健康，开始健康状况健测和<code class="language-vim">信息收集</code></li>
-<li>关心和评价你的健康，开展健康<code class="language-vim">风险评估</code>和健康评价</li>
-<li>改善和促进你的健康，开展健康风险干预和健康促进，进行<code class="language-vim">健康干预</code></li>
-<li><code class="language-vim">效果评价</code></li>
-</ol>
-</li>
-<li>
-<p>健康管理的服务流程</p>
-<ol>
-<li>健康<code class="language-vim">体检</code></li>
-<li>健康<code class="language-vim">评估</code></li>
-<li>个人健康管理<code class="language-vim">咨询</code></li>
-<li>个人健康管理<code class="language-vim">后续服务</code></li>
-<li>专项的健康及疾病管理服务</li>
-</ol>
-</li>
-<li>
-<p>健康管理基本策略</p>
-<ol>
-<li>生活方式管理</li>
-<li><code class="language-vim">需求</code>管理</li>
-<li>疾病管理</li>
-<li><code class="language-vim">灾难性病伤</code>管理</li>
-<li>残疾管理</li>
-<li>综合的<code class="language-vim">人群</code>健康管理</li>
-</ol>
-</li>
-<li>
-<p><strong>可改变行为危险因素：</strong>吸烟、饮酒、不合理膳食、静坐生活方式</p>
-</li>
-<li>
-<p><strong>不可改变行为危险因素：</strong>年龄、性别、种族、遗传</p>
-</li>
-<li>
-<p><strong>生活方式管理概念：</strong>是指个人或自我为核心的卫生保健活动。是通过健康促进技术，来保护人们远离不良行为，减少危险因素对健康的损害，预防疾病，改善健康。<code class="language-vim">膳食</code>、<code class="language-vim">体力活动</code>、<code class="language-vim">吸烟</code>、<code class="language-vim">适度饮酒</code>、<code class="language-vim">精神压力</code>等是目前对国人进行生活方式管理的重点。</p>
-</li>
-<li>
-<p><strong>生活方式管理特点：</strong>以<code class="language-vim">个体为中心</code>，强调个体的健康责任和作用；以预防为主，有效整合<code class="language-vim">三级预防</code>；通常与其他健康管理策略联合进行。</p>
-</li>
-<li>
-<p><strong>健康行为改变的技术 4 种：</strong>教育、激励、训练、<code class="language-vim">营销</code></p>
-</li>
-<li>
-<p>一级预防（没有生病）：<code class="language-vim">病因</code>预防为重点<code class="language-vim">地方病</code>、<code class="language-vim">传染病</code>、<code class="language-vim">职业病</code>（一个地方，传染的人多了，就成了职业病），主要是针对<code class="language-vim">传染病</code>，<code class="language-vim">职业病</code>、<code class="language-vim">地方病</code>等。</p>
-</li>
-<li>
-<p>二级预防（可能生病）：<code class="language-vim">早发现</code>、<code class="language-vim">早诊断</code>、<code class="language-vim">早治疗</code> <code class="language-vim">高危人群</code> <code class="language-vim">三早</code></p>
-</li>
-<li>
-<p>三级预防（已经生病）：临床预防，及时治疗</p>
-</li>
-<li>
-<p><strong>需求管理概念：</strong>是通过帮助健康和寻求恰当的卫生服务，控制为省成本，促进卫生服务的合理利用。</p>
-</li>
-<li>
-<p><strong>影响需求的主要因素：</strong>患病率、感知到的需要、患者偏好、<code class="language-vim">健康因素以外的动机</code>。</p>
-</li>
-<li>
-<p><strong>需求的主要方法：</strong>以问卷为基础的健康评估、以医疗卫生花费为基础的评估。</p>
-</li>
-<li>
-<p><strong>疾病管理概念：</strong>是一个协调医疗保健干预和与病人沟通的系统，它强调患者自我保健的重要性。包含人群识别、<code class="language-vim">循证医学</code>的指导、医学与服务提供者协调运作、患者自我管理教育、过程与结果的预测和管理以及定期的报告和反馈。</p>
-</li>
-<li>
-<p>疾病管理特点：</p>
-<ol>
-<li>目标人群是患有<code class="language-vim">特定疾病</code>的<code class="language-vim">个体</code></li>
-<li>关注<code class="language-vim">个体</code>和<code class="language-vim">群体</code>连续健康状况与生活质量</li>
-<li>医疗卫生服务及干预措施的综合协调</li>
-</ol>
-</li>
-<li>
-<p><strong>综合人群健康管理方法：</strong>包括一级、二级、三级预防。一级预防指在疾病发生前预防其发生。二级指疾病发展前对疾病早期诊断检测，问卷、筛查；三级指在疾病发生后预防其发展和蔓延，减少疼痛和伤害。</p>
-</li>
-<li>
-<p>优秀的灾难性病伤管理项目的特征</p>
-<ol>
-<li>转诊及时</li>
-<li>综合考虑各方面因素，制定出适宜的<code class="language-vim">医疗服务计划</code></li>
-<li>具备一支包含<code class="language-vim">多种医学专科及综合业务能力</code>的服务队伍，能够有效对可能出现的多种医疗<code class="language-vim">服务</code>需要</li>
-<li>最大限度地帮助患者进行<code class="language-vim">自我管理</code></li>
-<li>尽可能使患者及家属满意</li>
-</ol>
-</li>
-<li>
-<p><strong>残疾管理目的：</strong>减少工作地点发生参加事故的频率和费用代价</p>
-</li>
-<li>
-<p><code class="language-vim">膳食</code>不合理、身体<code class="language-vim">活动</code>不足及<code class="language-vim">吸烟</code>是造成多种慢性病的三大行为因素。</p>
-</li>
-<li>
-<p><strong>我国健康管理主要的任务是</strong>在新的医疗体制改革方案和“健康中国”总体框架下，仅仅围绕我国政府建设高水平小康社会的总体要求，创立现代健康管理创新体系，创新服务模式与技术手段，使<code class="language-vim">慢性非传然性疾病</code>得到有效控制</p>
-</li>
-<li>
-<p>健康管理与生产力发展是一个全新的健康理念。研究表明，每个<code class="language-vim">企业对于员工的健康管理，不是付出，而是投资</code></p>
-</li>
-<li>
-<p>健康管理产业在发展过程中的实施原则：</p>
-<ol>
-<li><code class="language-vim">理论研究</code>与实践探索相结合、构建中国特色健康管理学科与产业体系</li>
-<li>坚持需求牵引与产业推动相结合，以<code class="language-vim">学术引领产业</code>，依托政府的支持，以产业推动学术和科学发展。</li>
-<li>坚持体系构建与功能相结合，构建健康管理<code class="language-vim">医学服务新模式</code>和<code class="language-vim">中医特色预防保健</code>新体系</li>
-<li>坚持<code class="language-vim">技术标准与服务规范相结合</code>，努力规范健康管理服务流程，提高行业核心竞争力；坚持成果示范与推广应用相结合</li>
-<li>坚持引进、消化与自主创新相结合，充分吸收和利用各国先进的健康管理经验和技术，努力构建<code class="language-vim">国际化</code>的健康管理技术合作与服务平台，坚持政府主导与社会广泛参与相结合</li>
-</ol>
-</li>
+<li>健康管理的任务：<code class="language-vim">防大病、管慢病、粗健康</code></li>
+<li>医务工作者（健康管理师）：<code class="language-vim">系统教育、培训、取得资质</code></li>
+<li>客体：<code class="language-vim">你、我、他</code></li>
+<li>两大支撑点：<code class="language-vim">信息技术和金融保险</code></li>
+<li>公众理念：<code class="language-vim">病前主动防，病后科学管，跟踪服务不间断</code></li>
 </ul>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 健康管理的目的</h2>
+<ol>
+<li><code class="language-vim">完善</code>健康和<code class="language-vim">福利</code></li>
+<li><code class="language-vim">减少</code>健康<code class="language-vim">危险</code>因素</li>
+<li><code class="language-vim">预防``高危</code>人群患病</li>
+<li><code class="language-vim">易化</code>疾病<code class="language-vim">早</code>期<code class="language-vim">诊断</code></li>
+<li><code class="language-vim">增加</code>临床<code class="language-vim">效用``效益</code></li>
+<li><code class="language-vim">避免</code>可预防的<code class="language-vim">疾病相关并发症</code>的发病</li>
+<li><code class="language-vim">消除和减少</code>无效或不必要（<code class="language-vim">过度</code>）的<code class="language-vim">医疗</code>服务</li>
+<li>对疾病<code class="language-vim">结局</code>做出<code class="language-vim">度量</code>并提供持续的<code class="language-vim">评估和改进</code></li>
+</ol>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 健康管理的目标与特点</h2>
+<ul>
+<li>1948 年，WHO 首次提出三位健康概念</li>
+<li>1978 年，《阿拉木图宣言》，健康不仅仅是没有疾病和痛苦，而是包括身体、心理和社会功能各方面的完好状态。</li>
+<li>《渥太华宪章》，良好的健康是社会、经济和个人发展的重要资源</li>
+<li>1984 年，《保健大宪章》，健康不仅仅是没有疾病和虚弱，而是包括身体、心理和社会适应能力的问好状态</li>
+<li>1989 年，WHO，心理、生理、社会适应和道德方面的良好状态</li>
+</ul>
+<p>健康管理服务的特点：<code class="language-vim">标准化、足量化、个体化、系统化</code></p>
+<p>工作流程：依据循证医学和公卫的标准和学术公认的预防和控制指南。健康评估和风险的结果即要针对个体和群体的特征和健康需求，又要注重服务的连续性和有效性。</p>
+<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 健康管理的理论和实践溯源</h2>
+<p>“治未病”思想源自距今已有两千余年历史的中医学典籍《<code class="language-vim">黄帝内经</code>》《<code class="language-vim">素问·四气调神大论篇</code>》指出：“<code class="language-vim">圣人不治已病治未病，不治已乱之未乱</code>，此之谓也。夫病已成而后药之，乱已成而后治之，譬如渴而穿井，斗而铸锥，不亦晚乎？”</p>
+<ul>
+<li>未病先防 - 未病养生，防病于先</li>
+<li>即病防变 - 已病早治，防其传变</li>
+<li>瘥后防复 - 瘥后调摄，防其复发</li>
+</ul>
+<p>上工治未病，中工治欲病，下工治已病</p>
+<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 健康管理的科学基础</h2>
+<p>健康管理的科学性建立在慢性病的两个特点上：</p>
+<ol>
+<li>慢性病的过程很长，在被诊断为疾病之前，<code class="language-vim">进行有针对性的预防干预，有可能成功地阻断、延缓、甚至逆转疾病的发生和发作进程</code>，从而实现维护健康的目的。</li>
+<li>慢性病的危险因素中，<code class="language-vim">大部分属于可改变因素</code>。</li>
+</ol>
+<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 健康管理的基本不住</h2>
+<ol>
+<li>
+<p><code class="language-vim">了解和掌握你的健康，开展健康信息收集和健康检查。</code></p>
+<p>个人健康信息包括个人一般情况、目前健康状况和疾病家族史、生活方式、体格检查等。</p>
+</li>
+<li>
+<p><code class="language-vim">关心和评价健康，开展健康风险评价和评估。</code></p>
+</li>
+<li>
+<p><code class="language-vim">改善和促进你的健康，开展健康风险干预和健康促进。</code>如纠正不良的生活方式和习惯。</p>
+</li>
+</ol>
+<p>健康管理三部曲：</p>
+<ol>
+<li>健康体检是 - 前提</li>
+<li>健康风险评估 - 手段</li>
+<li>健康干预及促进 - 关键</li>
+</ol>
+<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 健康管理的服务流程</h2>
+<ol>
+<li>健康调查于健康体检：通过问卷或访谈，手机信息。</li>
+<li>健康评估</li>
+<li>个人健康管理咨询</li>
+<li>个人健康管理后续服务</li>
+<li>专项的健康及疾病管理的服务</li>
+</ol>
+<p>如糖尿病、心血管疾病及相关危险因素管理、精神压力缓解、戒烟、运动、营养及膳食咨询等。</p>
+<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 提供健康管理服务机构</h2>
+<p>任何有能力进行健康管理项目开发及服务的机构都应该是健康管理服务的提供者。</p>
+<ol>
+<li>医院、健康服务机构、社区。</li>
+<li>政府：广义的健康管理机构，通过政策立法来影响人们的消费行为及人群健康风险控制。</li>
+<li>商业服务机构：体检中心。</li>
+<li>企业级集体单位</li>
+<li>健康保险公司：为参加者提供健康管理项目。</li>
+</ol>
+<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 健康管理的基本策略</h2>
+<p>健康管理基本策略：是通过评估和控制健康风险，达到维护健康的目的。</p>
+<p>慢性病的危险因素关系：一因多果、一果多因、多因多果、互为因果</p>
+<p>健康管理基本策略有六种：生活方式管理、需求管理、疾病管理、灾难性病伤管理、残疾管理、综合的群体健康管理。</p>
+<h3 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>10.1. 生活方式管理特点</h3>
+<ol>
+<li>
+<p>以个体为主，强调个体的健康责任和作用</p>
+</li>
+<li>
+<p>以预防为主，有效整合三级预防</p>
+<ul>
+<li>一级预防：将疾病控制在尚未发生之时</li>
+<li>二级预防：通过早发现、早诊断、早治疗减缓疾病的发展</li>
+<li>三级预防：防止伤残，促进功能恢复，提高生存质量，延长寿命，降低病死率</li>
+</ul>
+</li>
+</ol>
+<h3 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>10.2. 健康行为改变的技术</h3>
+<ol>
+<li>教育：传递知识，确立态度，改变行为</li>
+<li>激励：通过正面强化、反面强化、反馈促进、惩罚等措施进行行为纠正。</li>
+<li>训练：培训个体掌握行为矫正的技术</li>
+<li>营销：利用社会营销的技术推广健康行为</li>
+</ol>
+<p>第 1 章 健康管理概论第 2 节 - 下 第 3、4 节（更新版） 2020-03-22 14_36</p>
 
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
@@ -323,7 +295,7 @@ All rights reserved.</span><span class="footer-modification">
 </a>
 
 
-<a aria-label="Next page: 第一节 概述" class="navigation navigation-next" href="01.html">
+<a aria-label="Next page: 习题" class="navigation navigation-next" href="习题.html">
     <i class="fa fa-angle-right"></i>
 </a>
 
@@ -337,7 +309,7 @@ All rights reserved.</span><span class="footer-modification">
                 "github_url":"https://liushilive.github.io/",
                 "language": "zh-cn",
                 "previous_page_link": "../../../index.html",
-                "next_page_link": "01.html"
+                "next_page_link": "习题.html"
             },
             "basePath": "../../..",
             "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
