--- a/md/基础知识/02/index.html
+++ b/md/基础知识/02/index.html
@@ -33,11 +33,7 @@
 <ul class="articles"><li class="chapter" data-level="1.1" data-path="../../../index.html"><a href="../../../index.html"><b>1.1.</b>介绍</a></li></ul>
 <li class="header">基础知识</li>
 <ul class="articles"><li class="chapter" data-level="2.1" data-path="../01/index.html"><a href="../01/index.html"><b>2.1.</b>第一章 健康管理概述</a>
-<ul class="articles"><li class="chapter" data-level="2.1.1" data-path="../01/01.html"><a href="../01/01.html"><b>2.1.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.1.2" data-path="../01/02.html"><a href="../01/02.html"><b>2.1.2.</b>第二节 健康管理的基本策略</a></li>
-<li class="chapter" data-level="2.1.3" data-path="../01/03.html"><a href="../01/03.html"><b>2.1.3.</b>第三节 健康管理的发展趋势</a></li>
-<li class="chapter" data-level="2.1.4" data-path="../01/04.html"><a href="../01/04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li>
-<li class="chapter" data-level="2.1.5" data-path="../01/习题.html"><a href="../01/习题.html"><b>2.1.5.</b>习题</a></li></ul></li>
+<ul class="articles"><li class="chapter" data-level="2.1.1" data-path="../01/习题.html"><a href="../01/习题.html"><b>2.1.1.</b>习题</a></li></ul></li>
 <li class="chapter active" data-level="2.2" data-path="index.html"><a href="index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="01.html"><a href="01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="02.html"><a href="02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
