--- a/md/基础知识/01/index.html
+++ b/md/基础知识/01/index.html
@@ -52,7 +52,8 @@
 <li class="chapter" data-level="2.16" data-path="../16/index.html"><a href="../16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
 <li class="header">专业技能</li>
 <ul class="articles"><li class="chapter" data-level="3.1" data-path="../../专业技能/01/index.html"><a href="../../专业技能/01/index.html"><b>3.1.</b>专业技能</a></li></ul>
-<li class="header">国家职业资格三级</li>
+<li class="header">学霸笔记</li>
+<ul class="articles"><li class="chapter" data-level="4.1" data-path="../../学霸笔记/index.html"><a href="../../学霸笔记/index.html"><b>4.1.</b>学霸笔记</a></li></ul>
             <li class="divider"></li>
             <li>
                 <a class="lsbook-link" href="https://github.com/liushilive/lsbook" target="blank">
@@ -267,12 +268,17 @@
 </ol>
 <p>第 1 章 健康管理概论第 2 节 - 下 第 3、4 节（更新版） 2020-03-22 14_36</p>
 
-                        <footer class="page-footer"><span class="copyright">© 2020 刘士. 
-All rights reserved.</span><span class="footer-modification">
+                        <footer class="page-footer">
+<span class="copyright">© 2020 刘士. All rights reserved.</span>
+<span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
-</span> 人次</span></span></footer>
-<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-<script>
+</span> 人次</span></span>
+</footer><script>
+function busuanzi(){
+    if (document.domain != "127.0.0.1") {$.getScript("//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js");}
+}
+setTimeout('busuanzi()', 2000);
+</script><script>
 
 </script>
                     </section>
