--- a/md/基础知识/15/index.html
+++ b/md/基础知识/15/index.html
@@ -52,7 +52,8 @@
 <li class="chapter" data-level="2.16" data-path="../16/index.html"><a href="../16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
 <li class="header">专业技能</li>
 <ul class="articles"><li class="chapter" data-level="3.1" data-path="../../专业技能/01/index.html"><a href="../../专业技能/01/index.html"><b>3.1.</b>专业技能</a></li></ul>
-<li class="header">国家职业资格三级</li>
+<li class="header">学霸笔记</li>
+<ul class="articles"><li class="chapter" data-level="4.1" data-path="../../学霸笔记/index.html"><a href="../../学霸笔记/index.html"><b>4.1.</b>学霸笔记</a></li></ul>
             <li class="divider"></li>
             <li>
                 <a class="lsbook-link" href="https://github.com/liushilive/lsbook" target="blank">
@@ -153,12 +154,17 @@
 <h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 健康管理服务</h2>
 <p>营销过程：①确定目标客户；②分析评价需求；③选择和利用资源；④确定产品价值；⑤促进客户购买；⑥客户健康价值健康管理服务营销组合包括：产品、价格、渠道、促销、有形展、过程、人员。</p>
 
-                        <footer class="page-footer"><span class="copyright">© 2020 刘士. 
-All rights reserved.</span><span class="footer-modification">
+                        <footer class="page-footer">
+<span class="copyright">© 2020 刘士. All rights reserved.</span>
+<span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
-</span> 人次</span></span></footer>
-<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-<script>
+</span> 人次</span></span>
+</footer><script>
+function busuanzi(){
+    if (document.domain != "127.0.0.1") {$.getScript("//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js");}
+}
+setTimeout('busuanzi()', 2000);
+</script><script>
 
 </script>
                     </section>
