--- a/md/专业技能/01/index.html
+++ b/md/专业技能/01/index.html
@@ -20,7 +20,7 @@
       rel="apple-touch-icon-precomposed" sizes="152x152">
 <link href="../../../../asserts/lsbook/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <!--分页-->
-<link href="" rel="next"/>
+<link href="../../学霸笔记/index.html" rel="next"/>
 </head>
 <body>
 <div class="book match-braces"><div class="book-summary">
@@ -52,7 +52,8 @@
 <li class="chapter" data-level="2.16" data-path="../../基础知识/16/index.html"><a href="../../基础知识/16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
 <li class="header">专业技能</li>
 <ul class="articles"><li class="chapter active" data-level="3.1" data-path="index.html"><a href="index.html"><b>3.1.</b>专业技能</a></li></ul>
-<li class="header">国家职业资格三级</li>
+<li class="header">学霸笔记</li>
+<ul class="articles"><li class="chapter" data-level="4.1" data-path="../../学霸笔记/index.html"><a href="../../学霸笔记/index.html"><b>4.1.</b>学霸笔记</a></li></ul>
             <li class="divider"></li>
             <li>
                 <a class="lsbook-link" href="https://github.com/liushilive/lsbook" target="blank">
@@ -594,12 +595,17 @@
 </li>
 </ul>
 
-                        <footer class="page-footer"><span class="copyright">© 2020 刘士. 
-All rights reserved.</span><span class="footer-modification">
+                        <footer class="page-footer">
+<span class="copyright">© 2020 刘士. All rights reserved.</span>
+<span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
-</span> 人次</span></span></footer>
-<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-<script>
+</span> 人次</span></span>
+</footer><script>
+function busuanzi(){
+    if (document.domain != "127.0.0.1") {$.getScript("//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js");}
+}
+setTimeout('busuanzi()', 2000);
+</script><script>
 
 </script>
                     </section>
@@ -624,6 +630,10 @@ All rights reserved.</span><span class="footer-modification">
 </a>
 
 
+<a aria-label="Next page: 学霸笔记" class="navigation navigation-next" href="../../学霸笔记/index.html">
+    <i class="fa fa-angle-right"></i>
+</a>
+
 
 </div>
 <script>
@@ -634,7 +644,7 @@ All rights reserved.</span><span class="footer-modification">
                 "github_url":"https://liushilive.github.io/",
                 "language": "zh-cn",
                 "previous_page_link": "../../基础知识/16/index.html",
-                "next_page_link": ""
+                "next_page_link": "../../学霸笔记/index.html"
             },
             "basePath": "../../..",
             "js": {}
