--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       rel="apple-touch-icon-precomposed" sizes="152x152">
 <link href="../asserts/lsbook/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <!--分页-->
-<link href="md/基础知识/01/index.html" rel="next"/>
+<link href="md/基础知识/01.html" rel="next"/>
 </head>
 <body>
 <div class="book match-braces"><div class="book-summary">
@@ -32,28 +32,27 @@
             <li class="header">Summary</li>
 <ul class="articles"><li class="chapter active" data-level="1.1" data-path="index.html"><a href="index.html"><b>1.1.</b>介绍</a></li></ul>
 <li class="header">基础知识</li>
-<ul class="articles"><li class="chapter" data-level="2.1" data-path="md/基础知识/01/index.html"><a href="md/基础知识/01/index.html"><b>2.1.</b>第一章 健康管理概述</a>
-<ul class="articles"><li class="chapter" data-level="2.1.1" data-path="md/基础知识/01/习题.html"><a href="md/基础知识/01/习题.html"><b>2.1.1.</b>习题</a></li></ul></li>
-<li class="chapter" data-level="2.2" data-path="md/基础知识/02/index.html"><a href="md/基础知识/02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="md/基础知识/02/习题.html"><a href="md/基础知识/02/习题.html"><b>2.2.1.</b>习题</a></li></ul></li>
-<li class="chapter" data-level="2.3" data-path="md/基础知识/03/index.html"><a href="md/基础知识/03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a></li>
-<li class="chapter" data-level="2.4" data-path="md/基础知识/04/index.html"><a href="md/基础知识/04/index.html"><b>2.4.</b>第四章 常见慢性病</a></li>
-<li class="chapter" data-level="2.5" data-path="md/基础知识/05/index.html"><a href="md/基础知识/05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a></li>
-<li class="chapter" data-level="2.6" data-path="md/基础知识/06/index.html"><a href="md/基础知识/06/index.html"><b>2.6.</b>第六章 健康教育学</a></li>
-<li class="chapter" data-level="2.7" data-path="md/基础知识/07/index.html"><a href="md/基础知识/07/index.html"><b>2.7.</b>第七章 营养与食品安全</a></li>
-<li class="chapter" data-level="2.8" data-path="md/基础知识/08/index.html"><a href="md/基础知识/08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a></li>
-<li class="chapter" data-level="2.9" data-path="md/基础知识/09/index.html"><a href="md/基础知识/09/index.html"><b>2.9.</b>第九章 心理健康</a></li>
-<li class="chapter" data-level="2.10" data-path="md/基础知识/10/index.html"><a href="md/基础知识/10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a></li>
-<li class="chapter" data-level="2.11" data-path="md/基础知识/11/index.html"><a href="md/基础知识/11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a></li>
-<li class="chapter" data-level="2.12" data-path="md/基础知识/12/index.html"><a href="md/基础知识/12/index.html"><b>2.12.</b>第十二章 健康信息学</a></li>
-<li class="chapter" data-level="2.13" data-path="md/基础知识/13/index.html"><a href="md/基础知识/13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a></li>
-<li class="chapter" data-level="2.14" data-path="md/基础知识/14/index.html"><a href="md/基础知识/14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a></li>
-<li class="chapter" data-level="2.15" data-path="md/基础知识/15/index.html"><a href="md/基础知识/15/index.html"><b>2.15.</b>第十五章 健康管理服务营销</a></li>
-<li class="chapter" data-level="2.16" data-path="md/基础知识/16/index.html"><a href="md/基础知识/16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
+<ul class="articles"><li class="chapter" data-level="2.1" data-path="md/基础知识/01.html"><a href="md/基础知识/01.html"><b>2.1.</b>第一章 健康管理概述</a></li>
+<li class="chapter" data-level="2.2" data-path="md/基础知识/02.html"><a href="md/基础知识/02.html"><b>2.2.</b>第二章 临床医学基础知识</a></li>
+<li class="chapter" data-level="2.3" data-path="md/基础知识/03.html"><a href="md/基础知识/03.html"><b>2.3.</b>第三章 预防医学基础知识</a></li>
+<li class="chapter" data-level="2.4" data-path="md/基础知识/04.html"><a href="md/基础知识/04.html"><b>2.4.</b>第四章 常见慢性病</a></li>
+<li class="chapter" data-level="2.5" data-path="md/基础知识/05.html"><a href="md/基础知识/05.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a></li>
+<li class="chapter" data-level="2.6" data-path="md/基础知识/06.html"><a href="md/基础知识/06.html"><b>2.6.</b>第六章 健康教育学</a></li>
+<li class="chapter" data-level="2.7" data-path="md/基础知识/07.html"><a href="md/基础知识/07.html"><b>2.7.</b>第七章 营养与食品安全</a></li>
+<li class="chapter" data-level="2.8" data-path="md/基础知识/08.html"><a href="md/基础知识/08.html"><b>2.8.</b>第八章 身体活动基本知识</a></li>
+<li class="chapter" data-level="2.9" data-path="md/基础知识/09.html"><a href="md/基础知识/09.html"><b>2.9.</b>第九章 心理健康</a></li>
+<li class="chapter" data-level="2.10" data-path="md/基础知识/10.html"><a href="md/基础知识/10.html"><b>2.10.</b>第十章 中医养生学基础知识</a></li>
+<li class="chapter" data-level="2.11" data-path="md/基础知识/11.html"><a href="md/基础知识/11.html"><b>2.11.</b>第十一章 康复医学基础知识</a></li>
+<li class="chapter" data-level="2.12" data-path="md/基础知识/12.html"><a href="md/基础知识/12.html"><b>2.12.</b>第十二章 健康信息学</a></li>
+<li class="chapter" data-level="2.13" data-path="md/基础知识/13.html"><a href="md/基础知识/13.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a></li>
+<li class="chapter" data-level="2.14" data-path="md/基础知识/14.html"><a href="md/基础知识/14.html"><b>2.14.</b>第十四章 健康保险与健康管理</a></li>
+<li class="chapter" data-level="2.15" data-path="md/基础知识/15.html"><a href="md/基础知识/15.html"><b>2.15.</b>第十五章 健康管理服务营销</a></li>
+<li class="chapter" data-level="2.16" data-path="md/基础知识/16.html"><a href="md/基础知识/16.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
 <li class="header">专业技能</li>
-<ul class="articles"><li class="chapter" data-level="3.1" data-path="md/专业技能/01/index.html"><a href="md/专业技能/01/index.html"><b>3.1.</b>专业技能</a></li></ul>
-<li class="header">学霸笔记</li>
-<ul class="articles"><li class="chapter" data-level="4.1" data-path="md/学霸笔记/index.html"><a href="md/学霸笔记/index.html"><b>4.1.</b>学霸笔记</a></li></ul>
+<ul class="articles"><li class="chapter" data-level="3.1" data-path="md/专业技能/01.html"><a href="md/专业技能/01.html"><b>3.1.</b>第一章 健康监测</a></li>
+<li class="chapter" data-level="3.2" data-path="md/专业技能/02.html"><a href="md/专业技能/02.html"><b>3.2.</b>第二章 健康风险评估与分析</a></li>
+<li class="chapter" data-level="3.3" data-path="md/专业技能/03.html"><a href="md/专业技能/03.html"><b>3.3.</b>第三章 健康指导</a></li>
+<li class="chapter" data-level="3.4" data-path="md/专业技能/04.html"><a href="md/专业技能/04.html"><b>3.4.</b>第四章 健康危险因素干预</a></li></ul>
             <li class="divider"></li>
             <li>
                 <a class="lsbook-link" href="https://github.com/liushilive/lsbook" target="blank">
@@ -114,7 +113,7 @@ setTimeout('busuanzi()', 2000);
 
 
 
-<a aria-label="Next page: 第一章 健康管理概述" class="navigation navigation-next" href="md/基础知识/01/index.html">
+<a aria-label="Next page: 第一章 健康管理概述" class="navigation navigation-next" href="md/基础知识/01.html">
     <i class="fa fa-angle-right"></i>
 </a>
 
@@ -128,7 +127,7 @@ setTimeout('busuanzi()', 2000);
                 "github_url":"https://liushilive.github.io/",
                 "language": "zh-cn",
                 "previous_page_link": "",
-                "next_page_link": "md/基础知识/01/index.html"
+                "next_page_link": "md/基础知识/01.html"
             },
             "basePath": ".",
             "js": {}
